--- a/templates/index.html
+++ b/templates/index.html
@@ -29,41 +29,41 @@
         <div class="tab-content mt-3" id="creditosTabsContent">
             <!-- Register Form -->
             <div class="tab-pane fade show active" id="registro" role="tabpanel">
-                <div class="card shadow-sm mb-4">
-                    <div class="card-header text-center">Formulario de Registro</div>
-                    <div class="card-body">
+                <div class="card shadow-sm mb-3" style="max-width: 70%; margin: auto; ">
+                    <div class="card-header text-center p-2">Formulario de Registro</div>
+                    <div class="card-body p-3">
                         <form id="formulario" class="needs-validation" novalidate>
-                            <div class="row mb-3">
+                            <div class="row mb-2">
                                 <div class="col-6">
-                                    <label for="cliente" class="form-label">Cliente</label>
-                                    <input type="text" id="cliente" class="form-control" required>
+                                    <label for="cliente" class="form-label">Cliente:</label>
+                                    <input type="text" id="cliente" class="form-control form-control-sm" required>
                                 </div>
                                 <div class="col-6">
-                                    <label for="monto" class="form-label">Monto</label>
-                                    <input type="number" id="monto" class="form-control" required>
-                                </div>
-                            </div>
-                            <div class="row mb-3">
-                                <div class="col-6">
-                                    <label for="tasa_interes" class="form-label">Tasa de Interés</label>
-                                    <input type="number" step="0.01" id="tasa_interes" class="form-control" required>
-                                </div>
-                                <div class="col-6">
-                                    <label for="plazo" class="form-label">Plazo (meses)</label>
-                                    <input type="number" id="plazo" class="form-control" required>
+                                    <label for="monto" class="form-label">Monto:</label>
+                                    <input type="number" id="monto" class="form-control form-control-sm" required>
                                 </div>
                             </div>
-                            <div class="mb-3">
-                                <label for="fecha_otorgamiento" class="form-label">Fecha de Otorgamiento</label>
-                                <input type="date" id="fecha_otorgamiento" class="form-control" required>
+                            <div class="row mb-2">
+                                <div class="col-6">
+                                    <label for="tasa_interes" class="form-label">Tasa de Interés:</label>
+                                    <input type="number" step="0.01" id="tasa_interes" class="form-control form-control-sm" required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="plazo" class="form-label">Plazo (meses):</label>
+                                    <input type="number" id="plazo" class="form-control form-control-sm" required>
+                                </div>
                             </div>
+                            <div class="mb-2">
+                                <label for="fecha_otorgamiento" class="form-label">Fecha de Otorgamiento:</label>
+                                <input type="date" id="fecha_otorgamiento" class="form-control form-control-sm" required>
+                            </div><br>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Registrar</button>
+                                <button type="submit" class="btn btn-primary btn-sm">Registrar</button>
                             </div>
                         </form>
                     </div>
                 </div>
-            </div>
+            </div>            
             <!-- End Register Form -->
             
             <!-- Credit Table -->
