update modules in app

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,5 +145,6 @@
         <!-- End Modal -->
     </div>
     <script src="/static/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
