--- a/static/styles.css
+++ b/static/styles.css
@@ -70,3 +70,43 @@ body {
     font-size: 13px; 
     margin-top: 2px;
 }
+
+/* Styles of popup */
+.popup {
+    display: none; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    justify-content: center;
+    align-items: center;
+    z-index: 1050; 
+}
+
+.popup-contenido {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    width: 300px;
+}
+
+.btn-confirmar, .btn-cancelar {
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-confirmar {
+    background-color: red;
+    color: white;
+}
+
+.btn-cancelar {
+    background-color: gray;
+    color: white;
+}
