--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="tabla-tab" data-bs-toggle="tab" data-bs-target="#tabla" type="button" role="tab">Créditos Registrados</button>
             </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="grafico-tab" data-bs-toggle="tab" data-bs-target="#graficos" type="button" role="tab">Estadisticas</button>
+            </li>
         </ul>
         <!-- End Nav Tabs -->
 
@@ -104,6 +107,19 @@
             <!-- End Credit Table -->
         </div>
         <!-- End Tab Content -->
+
+        <!-- Graphs -->
+        <div class="tab-pane fade" id="graficos" role="tabpanel">
+            <div class="card shadow-sm">
+                <div class="card-header text-center">Estadísticas</div>
+                <div class="card-body">
+                    <div class="row">
+                        <h2 class="text-center">Total de Créditos Otorgados</h2>
+                        <canvas id="creditosChart" style="max-width: 100%; height: 400px;"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Modal for edit credit -->
@@ -146,5 +162,6 @@
     </div>
     <script src="/static/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
