update modules in app

--- a/static/styles.css
+++ b/static/styles.css
@@ -110,3 +110,8 @@ body {
     background-color: gray;
     color: white;
 }
+
+#creditosChart {
+    width: 1200px !important;
+    height: 300px !important;
+}
